# VsCodePythonTemplate

./: pyproject.toml  ruff.toml
src/vscodepythontemplate/: __init__.py
