[project]
name = "vscodepythontemplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "TimothyAllman", email = "166746823+TimothyAllman@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "polars>=1.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
